--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "index.js",
   "author": "Samuel Pires",
   "license": "MIT",
+  "scripts": {
+    "start:dev": "webpack --watch --progress",
+    "start:prod": "node dist/src/index.js",
+    "build": "tsc"
+  },
   "dependencies": {
     "kcors": "^2.2.2",
     "koa": "^2.13.4",
